Première version du header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <div class="header">
+                <img src="./images/logo/Booki.png" alt="logo">
+                <a href="./hebergements.html">Hébergements</a>
+                <a href="./activités.html">Activités</a>
+            </div>
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
