--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/bac399a7bf.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,6 +25,14 @@
             </div>
         </header>
         <main>
+                <h2>Touvez votre hébergement pour des vacances de rêve</h2>
+                <p>En plein centre-ville ou en pleine nature</p>
+            <div class="search">
+                <i class="fa-solid fa-location-dot" style="color: #000000;"></i>
+                <input type="text" class="searchTerm" placeholder="Marseille, France" />
+                <button type="submit" class="searchButton"><b>Rechercher</b></button>
+            </div>
+            
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
