barre de filtres

--- a/index.html
+++ b/index.html
@@ -19,20 +19,32 @@
     <div class="main-container">
         <header>
             <div class="header">
-                <img src="./images/logo/Booki.png" alt="logo">
+                <img src="./images/logo/Booki.png" alt="logo" width=61.09px; height=19px;>
                 <a href="./hebergements.html">Hébergements</a>
                 <a href="./activités.html">Activités</a>
             </div>
         </header>
         <main>
-                <h2>Touvez votre hébergement pour des vacances de rêve</h2>
-                <p>En plein centre-ville ou en pleine nature</p>
-            <div class="search">
-                <i class="fa-solid fa-location-dot" style="color: #000000;"></i>
-                <input type="text" class="searchTerm" placeholder="Marseille, France" />
-                <button type="submit" class="searchButton"><b>Rechercher</b></button>
+                <div class="topPage">
+                    <h2>Touvez votre hébergement pour des vacances de rêve</h2>
+                    <p>En plein centre-ville ou en pleine nature</p>
+                <div class="search">
+                    <i class="fa-solid fa-location-dot" style="color: #000000;"></i>
+                    <input type="text" class="searchTerm" placeholder="Marseille, France" />
+                    <button type="button" class="searchButton"><b>Rechercher</b></button>
+                </div>
+                <div class="Filters">
+                    <b>Filtres</b>
+                    <button type="button" class="filtersButton"><i class="fa-solid fa-money-bill-wave" style="color: #0065FC;"></i>Économique</button>
+                    <button type="button" class="filtersButton"><i class="fa-solid fa-person" style="color: #0065FC;"></i>Familial</button>
+                    <button type="button" class="filtersButton"><i class="fa-solid fa-heart" style="color: #0065FC;"></i>Romantique</button>
+                    <button type="button" class="filtersButton"><i class="fa-solid fa-fire" style="color: #0065FC;"></i>Nos pépites</button>
+                </div>
+                <div class="infos">
+                <button class="infoButton"><i class="fa-solid fa-info" style="color: #0065FC;"></i></button>
+                <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
             </div>
-            
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
