--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
                                     </div>
                             </div>
                         </article>
+                        <div class="afficherPlus">
                         <a href="#">Afficher plus</a>
+                        </div>
                     </div>
                 </section>
                 <section class="populaires">
