--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         <header>
             <div class="header">
                 <img src="./images/logo/Booki.png" alt="logo" width=61.09px; height=19px;>
-                <a href="#">Hébergements</a>
-                <a href="#">Activités</a>
+                <nav>
+                    <a href="#">Hébergements</a>
+                    <a href="#">Activités</a>
+                </nav>
             </div>
         </header>
         <main>
@@ -29,7 +31,9 @@
                     <h2>Touvez votre hébergement pour des vacances de rêve</h2>
                     <p>En plein centre-ville ou en pleine nature</p>
                 <div class="search">
+                    <div class="searchLogo">
                     <i class="fa-solid fa-location-dot" style="color: #000000;"></i>
+                    </div>
                     <input type="text" class="searchTerm" placeholder="Marseille, France" />
                     <button type="button" class="searchButton"><b>Rechercher</b></button>
                 </div>
