--- a/index.html
+++ b/index.html
@@ -262,7 +262,30 @@
                 </div>
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="navfooter">
+                <ul>
+                    <li><h3>À propos</h3></li>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions générales</a></li>
+                    <li><a href="#">Données et confidentialité</a></li>
+                </ul>
+            </div>
+            <div class="navfooter">
+                <ul>
+                    <li><h3>Nos Hébergements</h3></li>
+                    <li><a href="#">Charte qualité</a></li>
+                    <li><a href="#">Proposer votre hôtel</a></li>
+                </ul>
+            </div>
+            <div class="navfooter">
+                <ul>
+                    <li><h3>Assistance</h3></li>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                </ul>
+            </div>
+        </footer>
     </div>
 </body>
 
