--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             </div>
         </header>
         <main>
-                <div class="topPage">
-                    <h2>Touvez votre hébergement pour des vacances de rêve</h2>
-                    <p>En plein centre-ville ou en pleine nature</p>
+            <div class="topPage">
+                <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
+                <p>En plein centre-ville ou en pleine nature</p>
                 <div class="search">
                     <div class="searchLogo">
-                    <i class="fa-solid fa-location-dot" style="color: #000000;"></i>
+                        <i class="fa-solid fa-location-dot" style="color: #000000;"></i>
                     </div>
                     <input type="text" class="searchTerm" placeholder="Marseille, France" />
                     <button type="button" class="searchButton"><b>Rechercher</b></button>
@@ -44,11 +44,15 @@
                     <button type="button" class="filtersButton"><i class="fa-solid fa-heart" style="color: #0065FC;"></i>Romantique</button>
                     <button type="button" class="filtersButton"><i class="fa-solid fa-fire" style="color: #0065FC;"></i>Nos pépites</button>
                 </div>
-                <div class="infos">
-                <button class="infoButton"><i class="fa-solid fa-info" style="color: #0065FC;"></i></button>
-                <p>Plus de 500 logements sont disponibles dans cette ville</p>
-                </div>
-                </div>
+            </div>
+            <div class="infos">
+                <p>
+                    <button class="infoButton">
+                        <i class="fa-solid fa-info" style="color: #0065FC;"></i>
+                    </button>
+                    Plus de 500 logements sont disponibles dans cette ville
+                </p>
+            </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
                     <div class="hebergements-title">
